Slight fixes to account for if image height is short than container for stretch. Dynamically setting the labels on the detail page

--- a/src/components/DetailsCuisineLabels/DetailsCuisineLabels.module.scss
+++ b/src/components/DetailsCuisineLabels/DetailsCuisineLabels.module.scss
@@ -1,6 +1,16 @@
+@import '../../styles/variables.scss';
+
 .container {
     border: 2px solid #000;
     border-radius: 10px;
     padding: .5rem .75rem;
     font-weight: bold;
+    background-color: #000;
+    color: #fff;
+}
+
+.mealTypeLabel {
+    background-color: $blue-100;
+    color: $blue-300;
+    margin: 0 1rem;
 }
