--- a/src/components/RecipeCard/RecipeCard.module.scss
+++ b/src/components/RecipeCard/RecipeCard.module.scss
@@ -3,6 +3,7 @@
 .recipeCardContainer {
     width: 100%;
     margin: 1.43rem 0;
+    background: #000;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 1.05);
     border-radius: 8px;
     display: grid;
